objects/vlocity_cmt__PicklistValue__c.object
<CustomObject>
    <description>Represents a value defined for a Vlocity Picklist.</description>
    <fields>
        <fullName>vlocity_cmt__Abbreviation__c</fullName>
        <label>Abbreviation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__BooleanValue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Boolean Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Code__c</fullName>
        <externalId>true</externalId>
        <label>Code</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DateTimeValue__c</fullName>
        <label>Date Time Value</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DateValue__c</fullName>
        <label>Date Value</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveFromDate__c</fullName>
        <label>Effective From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveUntilDate__c</fullName>
        <label>Effective Until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__GlobalKey__c</fullName>
        <description>The globally unique identifier of this Vlocity Picklist Value. Used to identify the picklist value across Salesforce instances and potentially within other systems. Vlocity uses a UUID as described in http://en.wikipedia.org/wiki/Universally_unique_identifier, but when migrated from other initiating systems, any globally unique picklist value identifier can be used.</description>
        <externalId>true</externalId>
        <label>Global Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsDefault__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__NumberValue__c</fullName>
        <label>Number Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PicklistId__c</fullName>
        <label>Vlocity Picklist</label>
        <referenceTo>vlocity_cmt__Picklist__c</referenceTo>
        <relationshipName>PicklistValues</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TextValue__c</fullName>
        <label>Text Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__UnitOfMeasureName__c</fullName>
        <label>Unit Of Measure</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Value__c</fullName>
        <formula>IF(  ISPICKVAL(vlocity_cmt__PicklistId__r.vlocity_cmt__DataType__c, &apos;Date Time&apos;) ,  TEXT(vlocity_cmt__DateTimeValue__c) ,
    IF( ISPICKVAL(vlocity_cmt__PicklistId__r.vlocity_cmt__DataType__c, &apos;Date&apos;) ,  TEXT(vlocity_cmt__DateValue__c) ,
        IF( ISPICKVAL(vlocity_cmt__PicklistId__r.vlocity_cmt__DataType__c, &apos;Text&apos;),  vlocity_cmt__TextValue__c ,
            IF( ISPICKVAL(vlocity_cmt__PicklistId__r.vlocity_cmt__DataType__c, &apos;Number&apos;) ,  (TEXT(vlocity_cmt__NumberValue__c) &amp; vlocity_cmt__UnitOfMeasureName__c) ,
                IF( ISPICKVAL(vlocity_cmt__PicklistId__r.vlocity_cmt__DataType__c, &apos;Boolean&apos;)  ,  IF( vlocity_cmt__BooleanValue__c = true  ,  &apos;true&apos; , &apos;false&apos; ), null )))))</formula>
        <label>Value</label>
        <type>Text</type>
    </fields>
    <label>Vlocity Picklist Value</label>
    <nameField>
        <label>Label</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity Picklist Values</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>vlocity_cmt__EffectiveFrom_Greater_EffectiveUntil</fullName>
        <active>true</active>
        <errorConditionFormula>vlocity_cmt__EffectiveFromDate__c  &gt;  vlocity_cmt__EffectiveUntilDate__c</errorConditionFormula>
        <errorDisplayField>vlocity_cmt__EffectiveUntilDate__c</errorDisplayField>
        <errorMessage>Effective Until Date should be greater than or equal to Effective From Date.</errorMessage>
    </validationRules>
</CustomObject>